Allow shortcut keys for both decimal separators point and comma

Re-enable commented out code to handle both '.' and ',' shortcut keys
for the decimal separator. Also port it from KLocale to QLocale.

BUG: 357824
FIXED-IN: 18.08.2

Test Plan:

Running kcalc with both locale en_US.UTF-8 and de_DE.UTF-8.
In both cases the keys '.' and ',' work.

Reviewed By: cfeck

Differential Revision: https://phabricator.kde.org/D15680